Ajustes no seed e mapeamento